--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.515.0",
     "next": "^15.3.3",
+    "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
